deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my1health-api-deployment
  namespace: my1health-api
  labels:
    app: my1health-api
spec:
  selector:
    matchLabels:
      app: my1health-api
  template:
    metadata:
      namespace: my1health-api
      labels:
        app: my1health-api
    spec:
      containers:
        - name: my1health-api
          image: paulmuri/my1health-api:v1.0.0
          ports:
            - containerPort: 80
