ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my1health-api-ingress
  namespace: my1health-api
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: murithipaul.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my1health-api-service
                port:
                  number: 80
